--- a/src/components/stars/star.module.css
+++ b/src/components/stars/star.module.css
@@ -368,7 +368,7 @@
   696px 1654px #fff, 1144px 60px #fff;
 }
 
-.stars2 {
+/* .stars2 {
   width: 2px;
   height: 2px;
   background: transparent;
@@ -429,7 +429,7 @@
 .stars2:after {
   content: '';
   position: absolute;
-  /* top: 2000px; */
+  top: 2000px;
   width: 2px;
   height: 2px;
   background: transparent;
@@ -522,7 +522,7 @@
 .stars3:after {
   content: '';
   position: absolute;
-  /* top: 2000px; */
+  top: 2000px;
   width: 3px;
   height: 3px;
   background: transparent;
@@ -552,7 +552,7 @@
   16px 1650px #fff, 1021px 1075px #fff, 723px 424px #fff, 1175px 41px #fff,
   494px 1957px #fff, 1296px 431px #fff, 175px 1507px #fff, 831px 121px #fff,
   498px 1947px #fff, 617px 880px #fff, 240px 403px #fff;
-}
+} */
 
 
 @keyframes animStar {
